--- a/clean-promo-banner/css/clean-promo-banner-styles.css
+++ b/clean-promo-banner/css/clean-promo-banner-styles.css
@@ -1,18 +1,25 @@
 /* desktop */
 #clean-promo-banner {
+    opacity:.95;
     background: #dbdbdb;
-    padding: 15px;
     text-align: center;
     transition: .5s;
+    font-family:sans-serif;
+    position: sticky;
+    top: 0px;
+    z-index: 99999;
 }
-#clean-promo-banner a:hover {
+#clean-promo-banner:hover {
+    opacity: 1;
     transition: .5s;
     -webkit-transition: .5s;
     -moz-transition: .5s;
     -ms-transition: .5s;
     -o-transition: .5s;
+    cursor:pointer;
 }
 #clean-promo-banner h1 {
+    text-transform:uppercase;
     margin: 0;
     padding: 5px;
     font-size: 30px;
@@ -21,6 +28,12 @@
     font-size: 16px;
     line-height: 1.3;
     padding: 10px;
+    margin:0px;
 }
 #clean-promo-banner h1:before,
 #clean-promo-banner h1:after{display:none;}
+
+@media (max-width:768px){
+    #clean-promo-banner h1{font-size:18px;}
+    #clean-promo-banner p {font-size:14px;}
+}
