--- a/clean-promo-banner/css/clean-promo-banner-styles.css
+++ b/clean-promo-banner/css/clean-promo-banner-styles.css
@@ -1,22 +1,33 @@
 /* desktop */
 #clean-promo-banner {
-    opacity:.95;
+    opacity:.88;
     background: #dbdbdb;
     text-align: center;
     transition: .5s;
     font-family:sans-serif;
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
     z-index: 99999;
+    animation: bounce .4s infinite;
+    -webkit-animation: bounce .4s infinite;
+    animation-delay: 5s;
+    animation-iteration-count:2;
 }
-#clean-promo-banner:hover {
+@-webkit-keyframes bounce {
+    0%       { bottom:5px; }
+    25%, 75% { bottom:15px; }
+    50%      { bottom:20px; }
+    100%     {bottom:0;}
+}
+#clean-promo-banner a{cursor:pointer;}
+#clean-promo-banner a:hover {
     opacity: 1;
     transition: .5s;
     -webkit-transition: .5s;
     -moz-transition: .5s;
     -ms-transition: .5s;
     -o-transition: .5s;
-    cursor:pointer;
 }
 #clean-promo-banner h1 {
     text-transform:uppercase;
