--- a/css/clean-promo-banner-styles.css
+++ b/css/clean-promo-banner-styles.css
@@ -1,5 +1,5 @@
 /* desktop */
-#clean-promo-banner {
+#simple-promo-banner {
     opacity:.88;
     background: #dbdbdb;
     text-align: center;
@@ -20,8 +20,8 @@
     50%      { bottom:20px; }
     100%     {bottom:0;}
 }
-#clean-promo-banner a{cursor:pointer;}
-#clean-promo-banner a:hover {
+#simple-promo-banner a{cursor:pointer;}
+#simple-promo-banner a:hover {
     opacity: 1;
     transition: .5s;
     -webkit-transition: .5s;
@@ -29,22 +29,22 @@
     -ms-transition: .5s;
     -o-transition: .5s;
 }
-#clean-promo-banner h1 {
+#simple-promo-banner h1 {
     text-transform:uppercase;
     margin: 0;
     padding: 5px;
     font-size: 30px;
 }
-#clean-promo-banner p {
+#simple-promo-banner p {
     font-size: 16px;
     line-height: 1.3;
     padding: 10px;
     margin:0px;
 }
-#clean-promo-banner h1:before,
-#clean-promo-banner h1:after{display:none;}
+#simple-promo-banner h1:before,
+#simple-promo-banner h1:after{display:none;}
 
 @media (max-width:768px){
-    #clean-promo-banner h1{font-size:18px;}
-    #clean-promo-banner p {font-size:14px;}
+    #simple-promo-banner h1{font-size:18px;}
+    #simple-promo-banner p {font-size:14px;}
 }
