--- a/css/simple-promo-banner-styles.css
+++ b/css/simple-promo-banner-styles.css
@@ -20,7 +20,7 @@
     50%      { bottom:20px; }
     100%     {bottom:0;}
 }
-#simple-promo-banner a{cursor:pointer;}
+#simple-promo-banner a{cursor:pointer;color:inherit;}
 #simple-promo-banner a:hover {
     opacity: 1;
     transition: .5s;
