--- a/css/simple-promo-banner-admin-styles.css
+++ b/css/simple-promo-banner-admin-styles.css
@@ -53,6 +53,7 @@ button#preview-reload {
 #simple-preview-banner h1 {
     display: inline-block;
     text-transform:uppercase;
+    font-weight:bold;
     padding: 5px;
     font-size: 30px;
     transition: .5s;
